--- a/src/main/resources/bgpicker.fxml
+++ b/src/main/resources/bgpicker.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<!--
+  ~ Copyright (c) 2023. trefas@yandex.ru
+  -->
 <?import javafx.scene.layout.*?>
-
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="ru.sysadminvlg.Bgpicker"
             prefHeight="400.0" prefWidth="600.0">
-
 </AnchorPane>
