--- a/src/main/resources/ru/sysadminvlg/test.fxml
+++ b/src/main/resources/ru/sysadminvlg/test.fxml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.layout.*?>
+<?import ru.sysadminvlg.Bgpicker?>
+<!--
+  ~ Copyright (c) 2023. trefas@yandex.ru
+  -->
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ru.sysadminvlg.Bgpicker"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="ru.sysadminvlg.Test">
+    <Bgpicker/>
 </AnchorPane>
