--- a/src/main/resources/ru/sysadminvlg/test.fxml
+++ b/src/main/resources/ru/sysadminvlg/test.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.*?>
+
+<?import javafx.scene.layout.AnchorPane?>
 <?import ru.sysadminvlg.Bgpicker?>
+
 <!--
   ~ Copyright (c) 2023. trefas@yandex.ru
   -->
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ru.sysadminvlg.Test">
-    <Bgpicker/>
+
+<AnchorPane prefHeight="150.0" prefWidth="225.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.sysadminvlg.Test">
+    <Bgpicker layoutX="30.0" layoutY="31.0" />
+   <Bgpicker layoutX="30.0" layoutY="91.0" />
 </AnchorPane>
