--- a/src/main/resources/ru/sysadminvlg/bgpicker.fxml
+++ b/src/main/resources/ru/sysadminvlg/bgpicker.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<fx:root focusTraversable="true" type="HBox" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <TextField fx:id="tf" focusTraversable="false" prefHeight="32.0" prefWidth="150.0" promptText="0(I)Rh- D-C-E-c-e-K-" style="-fx-background-radius: 5 0 0 5;" />
-    <Button fx:id="btn" focusTraversable="false" style="-fx-background-radius:0 5 5 0;">
+<fx:root styleClass="control" focusTraversable="true" stylesheets="@style.css" type="HBox" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <TextField fx:id="tf" focusTraversable="false" prefHeight="32.0" prefWidth="150.0" promptText="0(I)Rh- D-C-E-c-e-K-" />
+    <Button fx:id="btn" focusTraversable="false">
       <graphic>
          <SVGPath content="m 5.93945,13.1201c 0,0 3.06,-0.12 6.06005,0.88 3,1 5.83,-0.89 5.83,-0.89M 8.36077,7.62l          0.39,-0.88h -0.3c -0.65,0 -1.25,-0.26 -1.68,-0.69 -0.44,-0.43 -0.7,-1.03 -0.7,-1.68 0,-1.3 1.06,-2.37 2.37,          -2.37h 7.11003c 0.66,0 1.25,0.27 1.68,0.7 0.56,0.56 0.84,1.38 0.63,2.25 -0.27,1.08 -1.31,1.79 -2.42,1.79h          -0.16l 4.22,9.66c 1.35,3.08 0.47,5.6 -3.67,5.6H 8.16077c -4.18,0 -5.02,-2.53 -3.66,-5.61l 2.07,-4.7" fill="#00000000" scaleX="0.9" stroke="#000" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="2" />
       </graphic></Button>
