--- a/src/main/resources/ru/sysadminvlg/test.fxml
+++ b/src/main/resources/ru/sysadminvlg/test.fxml
@@ -8,6 +8,6 @@
   -->
 
 <AnchorPane prefHeight="150.0" prefWidth="225.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.sysadminvlg.Test">
-    <Bgpicker layoutX="30.0" layoutY="31.0" />
-   <Bgpicker layoutX="30.0" layoutY="91.0" />
+    <Bgpicker focusTraversable="true" layoutX="30.0" layoutY="31.0" />
+   <Bgpicker focusTraversable="true" layoutX="30.0" layoutY="91.0" />
 </AnchorPane>
