--- a/src/main/resources/ru/sysadminvlg/bgpicker.fxml
+++ b/src/main/resources/ru/sysadminvlg/bgpicker.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<fx:root styleClass="control" focusTraversable="true" stylesheets="@style.css" type="HBox" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <TextField fx:id="tf" focusTraversable="false" prefHeight="32.0" prefWidth="150.0" promptText="0(I)Rh- D-C-E-c-e-K-" />
-    <Button fx:id="btn" focusTraversable="false">
+<fx:root focusTraversable="true" prefHeight="12.0" prefWidth="161.0" styleClass="control" stylesheets="@style.css" type="AnchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+    <TextField fx:id="tf" focusTraversable="false" layoutX="7.0" minWidth="161.0" prefWidth="161.0" promptText="0(I)Rh- D-C-E-c-e-K-" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+    <Button fx:id="btn" focusTraversable="false" layoutX="128.0" layoutY="1.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
       <graphic>
-         <SVGPath content="m 5.93945,13.1201c 0,0 3.06,-0.12 6.06005,0.88 3,1 5.83,-0.89 5.83,-0.89M 8.36077,7.62l          0.39,-0.88h -0.3c -0.65,0 -1.25,-0.26 -1.68,-0.69 -0.44,-0.43 -0.7,-1.03 -0.7,-1.68 0,-1.3 1.06,-2.37 2.37,          -2.37h 7.11003c 0.66,0 1.25,0.27 1.68,0.7 0.56,0.56 0.84,1.38 0.63,2.25 -0.27,1.08 -1.31,1.79 -2.42,1.79h          -0.16l 4.22,9.66c 1.35,3.08 0.47,5.6 -3.67,5.6H 8.16077c -4.18,0 -5.02,-2.53 -3.66,-5.61l 2.07,-4.7" fill="#00000000" scaleX="0.9" stroke="#000" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="2" />
+         <SVGPath content="m 4.1824561,5.277193c 0.7060966,1.3807642 1.383099,-1.1148172 2.3578948,0M 4.5586613,1.6252857c -0.2987349,0 -0.5407093,0.2944055 -0.5407093,0.6523812 0,0.1789878 0.059558,0.3446595 0.1598967,0.4630669 0.098059,0.1184073 0.2348124,0.1898521 0.3830397,0.1898521H 4.629034L 4.5404002,3.1726069 4.1319731,4.2934333 3.9885559,4.687121 3.6598545,5.587977c -0.3101371,0.8481269 -0.1185454,1.5446322 0.83467,1.5446322h 1.749066c 0.9440938,0 1.1447536,-0.6938158 0.8368971,-1.5419429L 6.1184342,2.9305859h 0.036524c 0.2531268,0 0.4902729,-0.19579 0.5518442,-0.4931851C 6.7546898,2.1978324 6.6906419,1.9720318 6.5629388,1.8178269 6.4648804,1.6994195 6.3304066,1.6252857 6.1798988,1.6252857Z" fill="TRANSPARENT" scaleX="2.0" scaleY="2.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="0.5" />
       </graphic></Button>
 </fx:root>
