--- a/src/main/resources/ru/sysadminvlg/addrForm.fxml
+++ b/src/main/resources/ru/sysadminvlg/addrForm.fxml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<fx:root spacing="5.0" type="VBox" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER" spacing="5.0" type="VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
-   <AnchorPane>
-      <Label alignment="CENTER" text="Адрес" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-   </AnchorPane>
    <AnchorPane>
       <Label layoutY="4.0" text="Регион" />
       <TextField fx:id="region" AnchorPane.leftAnchor="68.0" AnchorPane.rightAnchor="0.0" />
