--- a/src/main/resources/ru/sysadminvlg/docForm.fxml
+++ b/src/main/resources/ru/sysadminvlg/docForm.fxml
@@ -1,15 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.collections.FXCollections?>
 <?import java.lang.String?>
-<fx:root type="VBox" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <ComboBox prefWidth="150.0" value="Паспорт РФ" fx:id="doctype">
-        <items>
-          <FXCollections fx:factory="observableArrayList">
-              <String fx:value="Паспорт РФ" />
-              <String fx:value="Военный билет" />
-          </FXCollections>
-        </items>
-    </ComboBox>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<fx:root spacing="5.0" type="VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <AnchorPane>
+        <Label layoutY="5.0" text="Тип документа" />
+        <ComboBox fx:id="doctype" layoutX="96.0" value="Паспорт РФ" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0">
+            <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="Паспорт РФ" />
+                  <String fx:value="Военный билет" />
+              </FXCollections>
+            </items>
+        </ComboBox>
+    </AnchorPane>
+    <AnchorPane>
+        <TextField layoutX="96.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0" />
+        <Label layoutY="5.0" text="Серия" />
+    </AnchorPane>
+    <AnchorPane>
+        <TextField layoutX="96.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0" />
+        <Label layoutY="5.0" text="Номер" />
+    </AnchorPane>
+    <AnchorPane>
+        <Label text="Кем выдан" />
+        <TextField layoutY="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+    </AnchorPane>
+    <AnchorPane>
+        <DatePicker AnchorPane.rightAnchor="0.0" />
+        <Label layoutY="5.0" text="Когда" />
+    </AnchorPane>
+    <AnchorPane>
+        <Button text="Готово" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+    </AnchorPane>
+   <padding>
+      <Insets bottom="8.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
 </fx:root>
