--- a/src/main/resources/ru/sysadminvlg/docForm.fxml
+++ b/src/main/resources/ru/sysadminvlg/docForm.fxml
@@ -15,30 +15,28 @@
         <ComboBox fx:id="doctype" layoutX="96.0" value="Паспорт РФ" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0">
             <items>
               <FXCollections fx:factory="observableArrayList">
-                  <String fx:value="Паспорт РФ" />
-                  <String fx:value="Военный билет" />
               </FXCollections>
             </items>
         </ComboBox>
     </AnchorPane>
     <AnchorPane>
-        <TextField layoutX="96.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0" />
+        <TextField fx:id="serial" layoutX="96.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0" />
         <Label layoutY="5.0" text="Серия" />
     </AnchorPane>
     <AnchorPane>
-        <TextField layoutX="96.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0" />
+        <TextField fx:id="number" layoutX="96.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="0.0" />
         <Label layoutY="5.0" text="Номер" />
     </AnchorPane>
     <AnchorPane>
         <Label text="Кем выдан" />
-        <TextField layoutY="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <TextField fx:id="issued" layoutY="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </AnchorPane>
     <AnchorPane>
-        <DatePicker AnchorPane.rightAnchor="0.0" />
+        <DatePicker fx:id="released" AnchorPane.rightAnchor="0.0" />
         <Label layoutY="5.0" text="Когда" />
     </AnchorPane>
     <AnchorPane>
-        <Button text="Готово" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+        <Button fx:id="btn" text="Готово" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
     </AnchorPane>
    <padding>
       <Insets bottom="8.0" left="5.0" right="5.0" top="5.0" />
