--- a/src/main/resources/ru/sysadminvlg/test.fxml
+++ b/src/main/resources/ru/sysadminvlg/test.fxml
@@ -1,12 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import ru.sysadminvlg.Addrpicker?>
 <?import ru.sysadminvlg.Bgpicker?>
 <?import ru.sysadminvlg.Docpicker?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.sysadminvlg.Test">
-    <Bgpicker focusTraversable="true" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
-    <Addrpicker AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0" />
-    <Docpicker layoutX="5.0" layoutY="62.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="65.0" />
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <HBox layoutX="5.0" layoutY="5.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+         <children>
+            <VBox alignment="TOP_CENTER" spacing="5.0">
+               <children>
+                  <Label text="ФИО донора">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </Label>
+                  <HBox prefWidth="200.0">
+                     <children>
+                        <TextField promptText="Фамилия">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <TextField layoutX="10.0" layoutY="10.0" promptText="Имя">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <TextField layoutX="60.0" layoutY="10.0" promptText="Отчество" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="BASELINE_LEFT">
+                     <children>
+                        <Label text="Дата рождения">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="5.0" />
+                           </padding>
+                        </Label>
+                        <DatePicker promptText="Не указана" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="BASELINE_LEFT">
+                     <children>
+                        <Label text="Номер телефона">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="5.0" />
+                           </padding>
+                        </Label>
+                        <TextField promptText="Не указан" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="BASELINE_LEFT">
+                     <children>
+                        <Label text="Место жительства">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="5.0" />
+                           </padding>
+                        </Label>
+                        <Addrpicker />
+                     </children>
+                  </HBox>
+                  <HBox alignment="BASELINE_LEFT">
+                     <children>
+                        <Label text="Удостоверение личности">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="5.0" />
+                           </padding>
+                        </Label>
+                        <Docpicker />
+                     </children>
+                  </HBox>
+                  <HBox alignment="BASELINE_LEFT">
+                     <children>
+                        <Label text="Группа крови и фенотип">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="5.0" />
+                           </padding>
+                        </Label>
+                        <Bgpicker />
+                     </children>
+                  </HBox>
+                  <Label layoutX="150.0" layoutY="10.0" text="Кроводачи">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </Label>
+                  <TableView>
+                    <columns>
+                      <TableColumn prefWidth="-1.0" text="C1" />
+                      <TableColumn prefWidth="-1.0" text="C2" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children>
+            </VBox>
+            <TableView focusTraversable="false">
+              <columns>
+                <TableColumn prefWidth="-1.0" text="C1" />
+                <TableColumn prefWidth="-1.0" text="C2" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </HBox>
+   </children>
 </AnchorPane>
