--- a/src/main/resources/ru/sysadminvlg/test.fxml
+++ b/src/main/resources/ru/sysadminvlg/test.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,142 +16,142 @@
 <?import ru.sysadminvlg.Bgpicker?>
 <?import ru.sysadminvlg.Docpicker?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox layoutX="5.0" layoutY="5.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <children>
-            <VBox alignment="TOP_CENTER" spacing="5.0">
-               <children>
-                  <Label text="ФИО донора">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-                  <HBox prefWidth="200.0">
-                     <children>
-                        <TextField promptText="Фамилия" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets right="5.0" />
-                           </HBox.margin>
-                        </TextField>
-                        <TextField layoutX="10.0" layoutY="10.0" promptText="Имя">
-                           <HBox.margin>
-                              <Insets right="5.0" />
-                           </HBox.margin>
-                        </TextField>
-                        <TextField layoutX="60.0" layoutY="10.0" promptText="Отчество" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="BASELINE_LEFT">
-                     <children>
-                        <Label text="Дата рождения">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="5.0" />
-                           </padding>
-                        </Label>
-                        <DatePicker promptText="Не указана" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="BASELINE_LEFT">
-                     <children>
-                        <Label text="Номер телефона">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="5.0" />
-                           </padding>
-                        </Label>
-                        <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" promptText="Не указан" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="BASELINE_LEFT">
-                     <children>
-                        <Label text="Место жительства">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="5.0" />
-                           </padding>
-                        </Label>
-                        <Addrpicker HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="BASELINE_LEFT">
-                     <children>
-                        <Label text="Удостоверение личности">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="5.0" />
-                           </padding>
-                        </Label>
-                        <Docpicker HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="BASELINE_LEFT">
-                     <children>
-                        <Label text="Группа крови и фенотип">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="5.0" />
-                           </padding>
-                        </Label>
-                        <Bgpicker HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="BASELINE_LEFT">
-                     <children>
-                        <Label text="Место работы">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" right="5.0" />
-                           </padding>
-                        </Label>
-                        <TextField HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <Label layoutX="150.0" layoutY="10.0" text="Кроводачи">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-                  <TableView VBox.vgrow="ALWAYS">
-                    <columns>
-                      <TableColumn prefWidth="-1.0" text="C1" />
-                      <TableColumn prefWidth="-1.0" text="C2" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-               </children>
-            </VBox>
-            <TableView focusTraversable="false" HBox.hgrow="ALWAYS">
-              <columns>
-                <TableColumn prefWidth="-1.0" text="C1" />
-                <TableColumn prefWidth="-1.0" text="C2" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </HBox>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="726.0" prefWidth="977.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.sysadminvlg.MainController">
+   <HBox layoutX="5.0" layoutY="5.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <VBox alignment="TOP_CENTER" spacing="5.0">
+         <Label text="ФИО донора">
+            <font>
+               <Font name="System Bold" size="14.0" />
+            </font>
+            <padding>
+               <Insets left="10.0" />
+            </padding>
+         </Label>
+         <HBox prefWidth="200.0">
+            <TextField fx:id="tf_surname" promptText="Фамилия" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
+            </TextField>
+            <TextField fx:id="tf_name" layoutX="10.0" layoutY="10.0" promptText="Имя">
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
+            </TextField>
+            <TextField fx:id="tf_patronim" layoutX="60.0" layoutY="10.0" promptText="Отчество" />
+         </HBox>
+         <HBox alignment="BASELINE_LEFT">
+            <Label text="Дата рождения">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" right="5.0" />
+               </padding>
+            </Label>
+            <DatePicker fx:id="dp_bday" promptText="Не указана" HBox.hgrow="ALWAYS" />
+         </HBox>
+         <HBox alignment="BASELINE_LEFT">
+            <Label text="Номер телефона">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" right="5.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="tf_phone" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" promptText="Не указан" HBox.hgrow="ALWAYS" />
+         </HBox>
+         <HBox alignment="BASELINE_LEFT">
+            <Label text="Место жительства">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" right="5.0" />
+               </padding>
+            </Label>
+            <Addrpicker fx:id="ce_addr" HBox.hgrow="ALWAYS" />
+         </HBox>
+         <HBox alignment="BASELINE_LEFT">
+            <Label text="Удостоверение личности">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" right="5.0" />
+               </padding>
+            </Label>
+            <Docpicker fx:id="ce_doc" HBox.hgrow="ALWAYS" />
+         </HBox>
+         <HBox alignment="BASELINE_LEFT">
+            <Label text="Группа крови и фенотип">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" right="5.0" />
+               </padding>
+            </Label>
+            <Bgpicker fx:id="ce_bgroupe" HBox.hgrow="ALWAYS" />
+         </HBox>
+         <HBox alignment="BASELINE_LEFT">
+            <Label text="Место работы">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" right="5.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="tf_work" HBox.hgrow="ALWAYS" />
+         </HBox>
+         <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: white;">
+            <buttons>
+               <Button fx:id="btn_clear" layoutX="308.0" layoutY="18.0" mnemonicParsing="false" onAction="#onDonorClear" text="Очистить" />
+               <Button fx:id="btn_add" mnemonicParsing="false" text="Добавить" />
+               <Button fx:id="btn_edit" mnemonicParsing="false" text="Изменить" />
+               <Button fx:id="btn_search" layoutX="313.0" layoutY="18.0" mnemonicParsing="false" text="Поиск" />
+            </buttons>
+            <padding>
+               <Insets right="5.0" />
+            </padding>
+         </ButtonBar>
+         <HBox>
+            <Label text="Кроводачи">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <Button fx:id="btn_create" mnemonicParsing="false" text="Создать">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Button>
+         </HBox>
+         <TableView fx:id="blood" VBox.vgrow="ALWAYS">
+            <columns>
+               <TableColumn fx:id="col_date" prefWidth="-1.0" text="Дата кроводачи" />
+               <TableColumn fx:id="col_med" prefWidth="-1.0" text="Медотвод" />
+            </columns>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+         </TableView>
+      </VBox>
+      <TableView fx:id="donors" focusTraversable="false" onMouseClicked="#onDonorSelect" HBox.hgrow="ALWAYS">
+         <columns>
+            <TableColumn fx:id="col_fio" prefWidth="221.0" text="ФИО" />
+            <TableColumn fx:id="col_bday" prefWidth="90.0" text="Дата рождения" />
+            <TableColumn fx:id="col_phone" prefWidth="88.0" text="Телефон" />
+            <TableColumn fx:id="col_bgroupe" prefWidth="137.0" text="Группа и фенотип" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </HBox>
 </AnchorPane>
