--- a/src/main/resources/ru/sysadminvlg/bgpopup.fxml
+++ b/src/main/resources/ru/sysadminvlg/bgpopup.fxml
@@ -15,7 +15,7 @@
             <RowConstraints />
             <RowConstraints />
         </rowConstraints>
-        <RadioButton text="0(I)">
+        <RadioButton text="0(I)" toggleGroup="$bg">
          <toggleGroup>
             <ToggleGroup fx:id="bg" />
          </toggleGroup></RadioButton>
